--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "animate.css": "^4.1.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-textarea-autosize": "^8.3.4"
   },
   "devDependencies": {
     "eslint": "8.16.0",
